plugins 
{
    id 'java-library'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

dependencies
{
    implementation project(':windows')
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.6.3'    
}

test.configure {
    jvmArgs += [ '--add-modules=jdk.incubator.foreign', '--enable-native-access=ALL-UNNAMED' ]
    useJUnitPlatform()
}
